style.css
:root {
  --foreground: #000000;
  --background: #fffaf3;
  --outline: #cecacd;
}

@media (prefers-color-scheme: dark) {
  :root {
    --foreground: #000000;
    --background: #ffffff;
    --outline: #524f67;
  }
}

body {
  margin: 0;
  font: 1rem/1.6 monospace;
  color: var(--foreground);
  background-color: var(--background);
  letter-spacing: 0.04rem;
}

main {
  max-width: 70ch;
  display: flex;
  flex-direction: column;
  row-gap: 4.5rem;
  margin: auto;
  padding: 3rem 1.5rem;
}

h1 {
  font-size: 2rem;
}

h2 {
  font-size: 1.7rem;
}

h3 {
  font-size: 1.4rem;
}

h1,
h2,
h3 {
  margin: 0;
  font-weight: 600;
  line-height: 1.3;
}

a {
  color: var(--foreground);
  text-decoration-thickness: 2px;
  text-underline-offset: 5px;
  text-decoration-color: var(--outline);
}

ul {
  display: flex;
  flex-wrap: wrap;
  font-weight: 500;
  list-style-type: none;
  margin: 0;
  padding: 0;
}

ul.links {
  column-gap: 1.5rem;
}

ul.social {
  margin-top: 1.5rem;
  gap: 1rem; /* Add spacing between social links */
}


ul.skills {
  gap: 0.8rem;
  margin-top: 1.5rem;
}

ul.skills li {
  border: 2px solid var(--outline);
  padding: 0.2rem 0.5rem;
  border-radius: 5px;
}

ul.honors {
  gap: 0.8rem;
  margin-top: 1.5rem;
}

.projects {
  display: flex;
  flex-direction: column;
  row-gap: 2rem;
  margin-top: 1.7rem
}

.projects article {
  border: 2px solid var(--outline);
  padding: 2rem;
  border-radius: 5px;
}

.container {
  max-width: 100%;
  height: auto;
}

img {
  max-width: 100%;
  height: auto;
}

.about-content {
  display: flex;
  align-items: center;
  justify-content: space-between;
  max-width: 900px;
  margin: 0 auto;
  gap: 20px;
}

.text {
  flex: 1;
}

.photo {
  flex-shrink: 0; /* Prevents the image from shrinking */
}

.photo img {
  width: 200px; /* Adjust size as needed */
  height: auto;
  border-radius: 10px; /* Optional */
}

